Pushing Start of Log Exception Work

--- a/InternshipSkeleton/Views/Home/Index.cshtml
+++ b/InternshipSkeleton/Views/Home/Index.cshtml
@@ -1,3 +1,6 @@
 ﻿@{
-	ViewBag.Title = "Home Page";
+    ViewBag.Title = "Home Page";
 }
+
+@Html.ActionLink("About", "About", "Home");
+@Html.ActionLink("Contact", "Contact", "Home");
