--- a/InternshipSkeleton/Views/Shared/_Layout.cshtml
+++ b/InternshipSkeleton/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Example", "Index", "Example")</li>
+                    <li>@Html.ActionLink("Log Exception", "Index", "LogException")</li>
                 </ul>
             </div>
         </div>
