Fixed Structure Map Dependency exception

--- a/InternshipSkeleton/Views/LogException/Index.cshtml
+++ b/InternshipSkeleton/Views/LogException/Index.cshtml
@@ -31,7 +31,7 @@
                 <td>@currentRow.MethodName</td>
                 <td>@currentRow.Source</td>
                 <td>@currentRow.StackTrace</td>
-               <!-- <td>@Html.ActionLink("Edit", "Update", new { UserID = currentRow.ExampleID })</td> -->
+               <!-- <td> (at) Html.ActionLink("Edit", "Update", new { UserID = currentRow.ExampleID })</td> -->
             </tr>
 
         }
