LogController Action table and working on LogInfo table

--- a/InternshipSkeleton/Views/Shared/_Layout.cshtml
+++ b/InternshipSkeleton/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
+                   <!-- <a href="~/Views/Shared/_Layout.cshtml">~/Views/Shared/_Layout.cshtml</a> --> 
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
@@ -23,7 +24,9 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Example", "Index", "Example")</li>
                     <li>@Html.ActionLink("Log", "Index", "Log")</li>
+                    <li>@Html.ActionLink("Log Controller Action", "Index", "LogControllerAction")</li>
                     <li>@Html.ActionLink("Log Exception", "Index", "LogException")</li>
+                    <li>@Html.ActionLink("Log Info", "Index", "LogInfo")</li>
                 </ul>
             </div>
         </div>
