Added Log MySql files

--- a/InternshipSkeleton/Views/Shared/_Layout.cshtml
+++ b/InternshipSkeleton/Views/Shared/_Layout.cshtml
@@ -13,7 +13,6 @@
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
-                   <!-- <a href="~/Views/Shared/_Layout.cshtml">~/Views/Shared/_Layout.cshtml</a> --> 
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
@@ -27,6 +26,7 @@
                     <li>@Html.ActionLink("Log Controller Action", "Index", "LogControllerAction")</li>
                     <li>@Html.ActionLink("Log Exception", "Index", "LogException")</li>
                     <li>@Html.ActionLink("Log Info", "Index", "LogInfo")</li>
+                    <li>@Html.ActionLink("Log MySQL", "Index", "LogMySql")</li>
                 </ul>
             </div>
         </div>
