Created LogWebRequest table

--- a/InternshipSkeleton/Views/Shared/_Layout.cshtml
+++ b/InternshipSkeleton/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                     <li>@Html.ActionLink("Log Exception", "Index", "LogException")</li>
                     <li>@Html.ActionLink("Log Info", "Index", "LogInfo")</li>
                     <li>@Html.ActionLink("Log MySQL", "Index", "LogMySql")</li>
+                    <li>@Html.ActionLink("Log Web Request", "Index", "LogWebRequest")</li>
                 </ul>
             </div>
         </div>
