Added Web Response table

--- a/InternshipSkeleton/Views/Shared/_Layout.cshtml
+++ b/InternshipSkeleton/Views/Shared/_Layout.cshtml
@@ -21,13 +21,14 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Example", "Index", "Example")</li>
+                
                     <li>@Html.ActionLink("Log", "Index", "Log")</li>
                     <li>@Html.ActionLink("Log Controller Action", "Index", "LogControllerAction")</li>
                     <li>@Html.ActionLink("Log Exception", "Index", "LogException")</li>
                     <li>@Html.ActionLink("Log Info", "Index", "LogInfo")</li>
                     <li>@Html.ActionLink("Log MySQL", "Index", "LogMySql")</li>
                     <li>@Html.ActionLink("Log Web Request", "Index", "LogWebRequest")</li>
+                    <li>@Html.ActionLink("Log Web Respone", "Index", "LogWebResponse")</li>
                 </ul>
             </div>
         </div>
