--- a/InternshipSkeleton/Views/Shared/_Layout.cshtml
+++ b/InternshipSkeleton/Views/Shared/_Layout.cshtml
@@ -20,8 +20,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                
+
+                    <li>@Html.ActionLink("Example", "Index", "Example")</li>
                     <li>@Html.ActionLink("Log", "Index", "Log")</li>
                     <li>@Html.ActionLink("Log Controller Action", "Index", "LogControllerAction")</li>
                     <li>@Html.ActionLink("Log Exception", "Index", "LogException")</li>
