Implemented search by UserID for LogWebRequest and LogWebResponse

--- a/InternshipSkeleton/Views/LogMySql/Index.cshtml
+++ b/InternshipSkeleton/Views/LogMySql/Index.cshtml
@@ -7,6 +7,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<!-- LogMySql table doesn't have UserID, so for now I won't implement search by userID -->
+
 <table style="width:100%; text-align:center;">
     <thead>
         <tr>
