Some table styling - encountering very slow loading of tables

--- a/InternshipSkeleton/Views/LogException/Index.cshtml
+++ b/InternshipSkeleton/Views/LogException/Index.cshtml
@@ -9,7 +9,7 @@
 <!-- Added link to search the log-->
 @Html.ActionLink("Search", "Search", "LogException");
 
-<table id="exampleTable"; style="width:100%; text-align:center;">
+<table style="width:100%; text-align:center;">
     <thead>
         <tr>
             <td>Time Stamp</td>
