Table styling might be done; some (commented out) additions for paging

--- a/InternshipSkeleton/Views/Shared/_Layout.cshtml
+++ b/InternshipSkeleton/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
                     <li>@Html.ActionLink("Log Info", "Index", "LogInfo")</li>
                     <li>@Html.ActionLink("Log MySQL", "Index", "LogMySql")</li>
                     <li>@Html.ActionLink("Log Web Request", "Index", "LogWebRequest")</li>
-                    <li>@Html.ActionLink("Log Web Respone", "Index", "LogWebResponse")</li>
+                    <li>@Html.ActionLink("Log Web Response", "Index", "LogWebResponse")</li>
                 </ul>
             </div>
         </div>
