--- a/InternshipSkeleton/Views/LogException/Index.cshtml
+++ b/InternshipSkeleton/Views/LogException/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using AsignioInternship.Data.LogException
-@using AsignioInternship.Data 
+@using AsignioInternship.Data
 
 <!-- (at)model IEnumerable<LogExceptionDataModel> -->
 @model PagedDataModelCollection<LogExceptionDataModel>
@@ -8,13 +8,35 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!-- Added link to search the log-->
-@Html.ActionLink("Search", "Search", "LogException");
+    <div>
+        <!-- dropdown form to choose how to sort the data -->
+        @{
+            List<SelectListItem> listItems = new List<SelectListItem>();
+            listItems.Add(new SelectListItem { Text = "Time Stamp", Value = "TimeStamp" });
+            listItems.Add(new SelectListItem { Text = "Method Name", Value = "MethodName" });
+        }
+        @using (Html.BeginForm("Index", "LogException", FormMethod.Post, new { /*id = "sortform",*/ @SortBy = ViewBag.Sort }))
+        {
+            @Html.DropDownListFor(m => m.SortBy, listItems, new { onchange = "this.form.submit();" })
+        }
 
-<!-- Previous button - if pagenumber would be 0, stay on same page -->
-@Html.ActionLink("Previous", "Index", new {@id = ((Model.PageNumber - 1) != 0) ? (Model.PageNumber - 1) : Model.PageNumber});
-<!-- Next button - if pagenumber would be >totalpages, stay on same page -->
-@Html.ActionLink("Next", "Index", new { @id = ((Model.PageNumber + 1) <= Model.TotalPages) ? (Model.PageNumber + 1) : Model.PageNumber });
+    </div>
+
+<div>
+    <!-- Added link to search the log-->
+    @Html.ActionLink("Search", "Search", "LogException");
+</div>
+
+<div>
+    Current Page: @Model.PageNumber
+</div>
+
+<div>
+    <!-- Previous button - if pagenumber would be 0, stay on same page -->
+    @Html.ActionLink("Previous", "Index", new { @id = ((Model.PageNumber - 1) != 0) ? (Model.PageNumber - 1) : Model.PageNumber });
+    <!-- Next button - if pagenumber would be >totalpages, stay on same page -->
+    @Html.ActionLink("Next", "Index", new { @id = ((Model.PageNumber + 1) <= Model.TotalPages) ? (Model.PageNumber + 1) : Model.PageNumber });
+</div>
 
 <table style="width:100%; text-align:center;">
     <thead>
