--- a/InternshipSkeleton/Views/LogException/Index.cshtml
+++ b/InternshipSkeleton/Views/LogException/Index.cshtml
@@ -8,19 +8,21 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div>
-    <!-- dropdown form to choose how to sort the data -->
-    @{
-        List<SelectListItem> listItems = new List<SelectListItem>();
-        listItems.Add(new SelectListItem { Text = "Time Stamp", Value = "TimeStamp" });
-        listItems.Add(new SelectListItem { Text = "Method Name", Value = "MethodName" });
-    }
-    @using (Html.BeginForm("Index", "LogException", FormMethod.Post, new { @class = "form-control" }))
-    {
-        @Html.DropDownListFor(m => m.SortBy, listItems, new { onchange = "this.form.submit();" })
-    }
+    <div>
+        <!-- dropdown form to choose how to sort the data -->
+        Sort data by:
+        @{
+            List<SelectListItem> listItems = new List<SelectListItem>();
+            listItems.Add(new SelectListItem { Text = "Time Stamp", Value = "TimeStamp", Selected = ("TimeStamp"== Model.SortBy) });
+            listItems.Add(new SelectListItem { Text = "Method Name", Value = "MethodName", Selected = ("MethodName" == Model.SortBy) });
+        }
 
-</div>
+        @using (Html.BeginForm("Index", "LogException", FormMethod.Post, new { id = "sortby", @class = "form-control"  }))
+        {
+            @Html.DropDownListFor(m => m.SortBy, listItems, new { onchange = "this.form.submit();" })
+        }
+
+    </div>
 
 <div>
     <!-- Added link to search the log-->
