--- a/InternshipSkeleton/Views/LogException/Index.cshtml
+++ b/InternshipSkeleton/Views/LogException/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using AsignioInternship.Data.LogException
-@using AsignioInternship.Data.CombinedLogException 
+﻿@using AsignioInternship.Data.CombinedLogException 
 @using AsignioInternship.Data
 
 
