--- a/InternshipSkeleton/Views/LogException/Search.cshtml
+++ b/InternshipSkeleton/Views/LogException/Search.cshtml
@@ -4,5 +4,5 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@Html.ActionLink("By User ID", "SearchByUserID", "LogException");
+@Html.ActionLink("By Method Name", "SearchByMethodName", "LogException");
 
