--- a/InternshipSkeleton/Views/LogException/Search.cshtml
+++ b/InternshipSkeleton/Views/LogException/Search.cshtml
@@ -1,8 +1,45 @@
-﻿
+﻿@using AsignioInternship.Data
+@using AsignioInternship.Data.CombinedLogException
+
+@model PagedDataModelCollection<CombinedLogExceptionDataModel>
+
 @{
     ViewBag.Title = "Search";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 @Html.ActionLink("By Method Name", "SearchByMethodName", "LogException");
+
+<!-- Adding - goal is to have a categorySelect dropdown list, along with a search box - search will happen based on these -->
+    Search by:
+@{
+    List<SelectListItem> listItems = new List<SelectListItem>();
+    listItems.Add(new SelectListItem { Text = "Email Address", Value = "EmailAddress" });
+    listItems.Add(new SelectListItem { Text = "Time Stamp", Value = "TimeStamp" });
+    listItems.Add(new SelectListItem { Text = "Method Name", Value = "MethodName" });
+}
+
+@using (Html.BeginForm("DisplayMethodNameSearchResult", "LogException", FormMethod.Post, new { id = "search", @class = "form-control" }))
+{
+    <div>
+        @Html.DropDownListFor(m => m.SearchBy, listItems)
+    </div>
+
+    @Html.AntiForgeryToken()
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.SearchInput, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.SearchInput, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.SearchInput, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Search" class="btn btn-default" />
+        </div>
+    </div>
+}
+
 
