--- a/InternshipSkeleton/Views/LogWebResponse/Index.cshtml
+++ b/InternshipSkeleton/Views/LogWebResponse/Index.cshtml
@@ -1,41 +1,64 @@
-﻿@using AsignioInternship.Data.LogWebResponse
+﻿@using AsignioInternship.Data.CombinedLogWebResponse
+@using AsignioInternship.Data
 
-@model IEnumerable<LogWebResponseDataModel>
+@model PagedDataModelCollection<CombinedLogWebResponseDataModel>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@Html.ActionLink("Search", "Search", "LogWebResponse");
+
+<div>
+    <!-- dropdown form to choose how to sort the data -->
+    Sort data by:
+    @{
+        List<SelectListItem> listItems = new List<SelectListItem>();
+        listItems.Add(new SelectListItem { Text = "Time Stamp", Value = "TimeStamp", Selected = ("TimeStamp" == Model.SortBy) });
+    }
+
+    @using (Html.BeginForm("Index", "LogWebResponse", FormMethod.Post, new { id = "sortby", @class = "form-control" }))
+    {
+        @Html.DropDownListFor(m => m.SortBy, listItems, new { onchange = "this.form.submit();" })
+    }
+</div>
+
+<div>
+    <!-- Added link to search the log-->
+    @Html.ActionLink("Search", "Search", "LogWebResponse");
+</div>
+
+<div>
+    Current Page: @Model.PageNumber/@Model.TotalPages
+</div>
+
+<div>
+    <!-- Previous button - if pagenumber would be 0, stay on same page -->
+    @Html.ActionLink("Previous", "Index", new { @id = ((Model.PageNumber - 1) != 0) ? (Model.PageNumber - 1) : Model.PageNumber });
+    <!-- Next button - if pagenumber would be >totalpages, stay on same page -->
+    @Html.ActionLink("Next", "Index", new { @id = ((Model.PageNumber + 1) <= Model.TotalPages) ? (Model.PageNumber + 1) : Model.PageNumber });
+</div>
 
 <table style="width:100%; text-align:center;">
     <thead>
         <tr>
+            <td>Email Address</td>
             <td>Time Stamp</td>
             <td>Web Request ID</td>
-            <td>User ID</td>
             <td>Status</td>
-            <td>Status Code</td>
-            <td>Status Description</td>
             <td>Redirect Location</td>
-
         </tr>
 
     </thead>
     <tbody>
 
-        @foreach (LogWebResponseDataModel currentRow in Model)
+        @foreach (CombinedLogWebResponseDataModel currentRow in Model.Items)
         {
             <tr>
+                <td>@currentRow.EmailAddress</td>
                 <td>@currentRow.TimeStamp</td>
                 <td>@currentRow.WebRequestID</td>
-                <td>@currentRow.UserID</td>
                 <td>@currentRow.Status</td>
-                <td>@currentRow.StatusCode</td>
-                <td>@currentRow.StatusDescription</td>
                 <td>@currentRow.RedirectLocation</td>
-                <!-- <td> (at) Html.ActionLink("Edit", "Update", new { UserID = currentRow.ExampleID })</td> -->
             </tr>
-
         }
     </tbody>
 </table>
