starting to add Go to Page functionality on LogException search results

--- a/InternshipSkeleton/Views/LogException/DisplayMethodNameSearchResult.cshtml
+++ b/InternshipSkeleton/Views/LogException/DisplayMethodNameSearchResult.cshtml
@@ -15,42 +15,59 @@
     Current Page: @Model.PageNumber/@Model.TotalPages
 </div>
 
-<div>
-    <!-- Previous button - if pagenumber would be 0, stay on same page -->
-    @Html.ActionLink("Previous", "DisplayMethodNameSearchResult", new { @id = ((Model.PageNumber - 1) != 0) ? (Model.PageNumber - 1) : Model.PageNumber });
-    <!-- Next button - if pagenumber would be >totalpages, stay on same page -->
-    @Html.ActionLink("Next", "DisplayMethodNameSearchResult", new { @id = ((Model.PageNumber + 1) <= Model.TotalPages) ? (Model.PageNumber + 1) : Model.PageNumber });
-</div>
+Go to page:
+<!-- (at)using (Html.BeginForm("DisplayMethodNameSearchResult", "LogException", FormMethod.Post, new { (at)class = "form-control" })) -->
+{
+    <!-- (at) Html.Editor(m => m.PageNumber, "DisplayMethodNameSearchResult", new { htmlAttributes = new { (at)class = "form-control" } })
 
-<table style="width:100%; text-align:center;">
-    <thead>
-        <tr>
-            <td>Email Address</td>
-            <td>Time Stamp</td>
-            <td>Web Request ID</td>
-            <td>Message</td>
-            <td>Method Name</td>
-            <td>Source</td>
-            <td>Stack Trace</td>
-        </tr>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Go" class="btn btn-default" />
+        </div>
+    </div> -->
+}
 
-    </thead>
-    <tbody>
+@using (Html.BeginForm("DisplayMethodNameSearchResult", "LogException", FormMethod.Get))
+{
+    @Html.TextBox("id")
+    <input type="submit" name="btnSubmit" value="Go" />
+}
 
-        @foreach (CombinedLogExceptionDataModel currentRow in Model.Items)
-        {
+
+    <div>
+        <!-- Previous button - if pagenumber would be 0, stay on same page -->
+        @Html.ActionLink("Previous", "DisplayMethodNameSearchResult", new { @id = ((Model.PageNumber - 1) != 0) ? (Model.PageNumber - 1) : Model.PageNumber });
+        <!-- Next button - if pagenumber would be >totalpages, stay on same page -->
+        @Html.ActionLink("Next", "DisplayMethodNameSearchResult", new { @id = ((Model.PageNumber + 1) <= Model.TotalPages) ? (Model.PageNumber + 1) : Model.PageNumber });
+    </div>
+
+    <table style="width:100%; text-align:center;">
+        <thead>
             <tr>
-                <td>@currentRow.EmailAddress</td>
-                <td>@currentRow.TimeStamp</td>
-                <td>@currentRow.WebRequestID</td>
-                <td>@currentRow.Message</td>
-                <td>@currentRow.MethodName</td>
-                <td>@currentRow.Source</td>
-                <td>@currentRow.StackTrace</td>
+                <td>Email Address</td>
+                <td>Time Stamp</td>
+                <td>Web Request ID</td>
+                <td>Message</td>
+                <td>Method Name</td>
+                <td>Source</td>
+                <td>Stack Trace</td>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (CombinedLogExceptionDataModel currentRow in Model.Items)
+            {
+                <tr>
+                    <td>@currentRow.EmailAddress</td>
+                    <td>@currentRow.TimeStamp</td>
+                    <td>@currentRow.WebRequestID</td>
+                    <td>@currentRow.Message</td>
+                    <td>@currentRow.MethodName</td>
+                    <td>@currentRow.Source</td>
+                    <td>@currentRow.StackTrace</td>
+                </tr>
+            }
+        </tbody>
+    </table>
 
 
 
